--- a/package.json
+++ b/package.json
@@ -2,39 +2,49 @@
   "name": "electron-apps-template",
   "version": "1.0.0",
   "description": "Um template boilerplate seguro, escalável e moderno para criar aplicações desktop com Electron e React.",
-  "main": "forge.config.js",
+  "main": "./src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "electron-vite dev",
+    "start": "electron-vite dev",
+    "build": "electron-vite build",
+    "preview": "electron-vite preview",
+    "lint": "eslint src --ext .js,.jsx",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-react": "^7.28.5",
-  "@electron-forge/cli": "7.8.3",
-    "@electron-forge/maker-dmg": "^7.10.2",
-    "@electron-forge/maker-squirrel": "^7.10.2",
-    "@electron-forge/maker-zip": "^7.10.2",
-    "@electron-forge/plugin-webpack": "^7.10.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "electron-is-dev": "^3.0.1",
+    "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^11.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^5.1.0",
     "@vitest/coverage-v8": "^4.0.8",
     "@vitest/ui": "^4.0.8",
     "autoprefixer": "^10.4.21",
-    "babel-loader": "^10.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "css-loader": "^7.1.2",
+    "cross-env": "^10.1.0",
     "electron": "^39.1.1",
-    "electron-forge": "^5.2.4",
-    "electron-is-dev": "^3.0.1",
+    "electron-vite": "^4.0.1",
     "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.32.0",
@@ -42,13 +52,11 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "jsdom": "^27.1.0",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
-    "postcss-loader": "^8.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "style-loader": "^4.0.0",
-    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.17",
+    "vite": "^7.2.2",
     "vitest": "^4.0.8"
   }
 }
