chore: add dependencies and environment configuration
- Add @sentry/electron for crash reporting
- Add SENTRY_DSN and logging config to .env.example
- Update package-lock.json

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ REACT_APP_DEV=true
 
 # API (exemplo)
 REACT_APP_API_URL=http://localhost:3000
+
+# Crash Reporting (Sentry)
+# Obtain your DSN from https://sentry.io after creating a project
+SENTRY_DSN=
+
+# Logging Level (debug, info, warn, error)
+APP_LOGGING_LEVEL=info
+
+# Updates
+APP_UPDATES_ENABLED=true
+
+# Single Instance
+APP_SINGLE_INSTANCE=true
