feat(test): update package.json with new test scripts
- Add test:main for main process tests only
- Add test:renderer for renderer process tests only
- Add test:unit for running all unit tests
- Add test:watch for watch mode during development
- Reorganize test scripts for better usability

--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "electron-vite preview",
     "lint": "eslint src --ext .js,.jsx",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:main": "vitest --config vitest.config.main.js",
+    "test:renderer": "vitest --config vitest.config.renderer.js",
+    "test:unit": "vitest run --config vitest.config.main.js && vitest run --config vitest.config.renderer.js",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
