fix: separate main and renderer test configurations
- Update vitest.config.js to exclude main process tests
- Change npm test script to run test:unit (both configs)
- Add react plugin to renderer test config
- Prevent test environment conflicts between jsdom and node
- All 166 tests now passing (95 main + 71 renderer)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "electron-vite build",
     "preview": "electron-vite preview",
     "lint": "eslint src --ext .js,.jsx",
-    "test": "vitest",
+    "test": "npm run test:unit",
     "test:main": "vitest --config vitest.config.main.js",
     "test:renderer": "vitest --config vitest.config.renderer.js",
     "test:unit": "vitest run --config vitest.config.main.js && vitest run --config vitest.config.renderer.js",
