--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "marked": "^17.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
