--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@sentry/electron": "^5.0.0",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "csv-parse": "^6.1.0",
     "csv-stringify": "^6.6.0",
     "electron-devtools-installer": "^4.0.0",
@@ -38,10 +40,13 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
+    "i18next": "^25.7.2",
+    "lucide-react": "^0.556.0",
     "marked": "^17.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-i18next": "^16.4.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
