--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
     "i18next": "^25.7.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.556.0",
     "marked": "^17.0.0",
     "react": "^18.3.1",
