--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -43,11 +44,9 @@
     "electron-updater": "^6.6.2",
     "i18next": "^25.7.2",
     "i18next-resources-to-backend": "^1.2.1",
-    "lucide-react": "^0.556.0",
     "marked": "^17.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-feather": "^2.0.10",
     "react-i18next": "^16.4.0",
     "tailwind-merge": "^3.3.1"
   },
