--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:unit": "vitest run --config vitest.config.main.js && vitest run --config vitest.config.renderer.js",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
@@ -77,6 +79,16 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.17",
     "vite": "^7.2.2",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.8",
+    "storybook": "^10.1.8",
+    "@storybook/react-vite": "^10.1.8",
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-vitest": "^10.1.8",
+    "@storybook/addon-a11y": "^10.1.8",
+    "@storybook/addon-docs": "^10.1.8",
+    "prop-types": "^15.8.1",
+    "eslint-plugin-storybook": "^10.1.8",
+    "playwright": "^1.57.0",
+    "@vitest/browser-playwright": "^4.0.8"
   }
 }
