--- a/package.json
+++ b/package.json
@@ -44,23 +44,31 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
+    "framer-motion": "^12.23.26",
     "i18next": "^25.7.2",
     "i18next-resources-to-backend": "^1.2.1",
     "marked": "^17.0.0",
+    "match-sorter": "^8.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.4.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-a11y": "^10.1.8",
+    "@storybook/addon-docs": "^10.1.8",
+    "@storybook/addon-vitest": "^10.1.8",
+    "@storybook/react-vite": "^10.1.8",
     "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/browser-playwright": "^4.0.8",
     "@vitest/coverage-v8": "^4.0.8",
     "@vitest/ui": "^4.0.8",
     "autoprefixer": "^10.4.21",
@@ -73,22 +81,16 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-storybook": "^10.1.8",
     "jsdom": "^27.1.0",
     "nodemon": "^3.1.10",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
+    "prop-types": "^15.8.1",
+    "storybook": "^10.1.8",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.17",
     "vite": "^7.2.2",
-    "vitest": "^4.0.8",
-    "storybook": "^10.1.8",
-    "@storybook/react-vite": "^10.1.8",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.8",
-    "@storybook/addon-a11y": "^10.1.8",
-    "@storybook/addon-docs": "^10.1.8",
-    "prop-types": "^15.8.1",
-    "eslint-plugin-storybook": "^10.1.8",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.8"
+    "vitest": "^4.0.8"
   }
 }
