--- a/package.json
+++ b/package.json
@@ -86,10 +86,12 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-storybook": "^10.1.8",
     "jsdom": "^27.1.0",
+    "memlab": "^1.1.60",
     "nodemon": "^3.1.10",
     "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
+    "puppeteer": "^24.33.0",
     "storybook": "^10.1.8",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.17",
