--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "electron-vite preview",
     "lint": "eslint src --ext .js,.jsx",
     "test": "npm run test:unit",
+    "test:memory": "node scripts/run-memory-test.cjs",
     "test:main": "vitest --config vitest.config.main.js",
     "test:renderer": "vitest --config vitest.config.renderer.js",
     "test:unit": "vitest run --config vitest.config.main.js && vitest run --config vitest.config.renderer.js",
