--- a/package.json
+++ b/package.json
@@ -98,5 +98,15 @@
     "tailwindcss": "^4.1.17",
     "vite": "^7.2.2",
     "vitest": "^4.0.8"
+  },
+  "build": {
+    "fileAssociations": [
+      {
+        "ext": "myapp",
+        "name": "MyApp File",
+        "description": "My Application File Support",
+        "role": "Editor"
+      }
+    ]
   }
 }
