--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "electron-vite preview",
     "lint": "eslint src --ext .js,.jsx",
     "test": "npm run test:unit",
-    "test:memory": "npx wait-on http://localhost:5173 && node scripts/run-memory-test.cjs",
+    "test:memory": "node test/memory/runner.cjs",
     "test:main": "vitest --config vitest.config.main.js",
     "test:renderer": "vitest --config vitest.config.renderer.js",
     "test:unit": "vitest run --config vitest.config.main.js && vitest run --config vitest.config.renderer.js",
@@ -62,6 +62,7 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@chromatic-com/storybook": "^4.1.3",
+    "@memlab/api": "^1.0.42",
     "@playwright/test": "^1.57.0",
     "@storybook/addon-a11y": "^10.1.8",
     "@storybook/addon-docs": "^10.1.8",
@@ -97,7 +98,8 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.17",
     "vite": "^7.2.2",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.8",
+    "wait-on": "^9.0.3"
   },
   "build": {
     "fileAssociations": [
