refactor: Atualiza dependências, refina tipagem em vários módulos e remove teste de integração obsoleto.

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -5,7 +5,7 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
-    "strict": false,
+    "strict": true,
     "types": [
       "vite/client",
       "@testing-library/jest-dom",
