feat: formaliza migração para TypeScript com nova especificação de arquitetura e arquiva documentos de planejamento, atualizando o ponto de entrada principal no package.json.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-apps-template",
   "version": "1.0.0",
   "description": "Um template boilerplate seguro, escalável e moderno para criar aplicações desktop com Electron e React.",
-  "main": "./src/main.js",
+  "main": "./out/main/index.js",
   "scripts": {
     "dev": "electron-vite dev",
     "start": "electron-vite dev",
